Levitation import of page 2465 rev 8415.

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -35,12 +35,12 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 * ''Revisit the "is this id in the collection"-function''
 
 
-* '''Implement global source-preference'''
+* <del>'''Implement global source-preference'''</del>
 ** <del>Change database</del>
 ** <del>Use it for collection-queries</del>
 ** Use it for medialib_info-variant
 ** <del>Have a config-value system to change the priorities</del>
-** Allow plugins to set default sourcerank values. (Create a function that registers the source if it is not in the mlib, then sets the [pluginname].sourcerank config if it is an empty string (signifying that the user wants the default or never set a value.))
+** <del>Allow plugins to set default sourcerank values. (Create a function that sets the [pluginname].sourcerank config if it is an empty string (signifying that the user wants the default or never set a value.) or does not exist.)</del>
 ** <del>Change the config names from "server.sourcerank", "plugin/[pluginname].sourcerank" and "client/[clientname].sourcerank" to something different.</del>
 * ''Implement per collection-node source preference''
 
