--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -38,7 +38,7 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 * <del>'''Implement global source-preference'''</del>
 ** <del>Change database</del>
 ** <del>Use it for collection-queries</del>
-** Use it for medialib_info-variant
+** <del>Use it for medialib_info-variant</del>
 ** <del>Have a config-value system to change the priorities</del>
 ** <del>Allow plugins to set default sourcerank values. (Create a function that sets the [pluginname].sourcerank config if it is an empty string (signifying that the user wants the default or never set a value.) or does not exist.)</del>
 ** <del>Change the config names from "server.sourcerank", "plugin/[pluginname].sourcerank" and "client/[clientname].sourcerank" to something different.</del>
@@ -46,7 +46,6 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 
 
 * <del>'''Add default-properties when saving a collection.'''</del> (still double-checked when querying, not for pshuffle/queue, as those are to be abolished)
-* ''Allow filters to have no operands + default to universe on saving?''
 * ''Make these properties configureable''
 
 
