Levitation import of page 2466 rev 8421.

--- a/0-/GSoC:2008/nycli/Roadmap.mediawiki
+++ b/0-/GSoC:2008/nycli/Roadmap.mediawiki
@@ -5,9 +5,13 @@
 * '''''MILESTONE'''''
 
 
-* Collections operations
+* Collections operations [2008-08-03]
+* Aliases [2008-08-07]
+
+* '''''MILESTONE'''''
+
+
 * Discuss with mentor what todo next
 ** Extend parser? Virtual paths?
-** Aliases?
-* Auto-completion
-** Commands, playlist, spell-correction, etc
+** Auto-completion
+*** Commands, playlist, spell-correction, etc
