Levitation import of page 2465 rev 8422.

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -13,7 +13,7 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 
 
 * <del>Use strings in the medialib everywhere</del>
-* Implement NATCOLL
+* <del>Implement NATCOLL</del>
 * Add prefix-matching
 ** <del>For BINARY collation</del>
 ** <del>For NOCASE collation</del>
