Undo revision 8430 by [[Special:Contributions/Funman|Funman]] ([[User talk:Funman|Talk]]) - http://randomguy3.wordpress.com/2007/12/29/now-playing-mpris/ - Revert before approval by the team
Levitation import of page 2408 rev 8431.

--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -1,6 +1,6 @@
 [[Image:Mpris.png]]
 
-'''''Version 2.0'''''
+'''''Version 1.0'''''
 
 ;MPRIS
 :Media Player Remote Interfacing Specification
@@ -38,6 +38,10 @@ For example:
 * org.mpris.vlc
 * org.mpris.xmms2
 
+=== The Interface ===
+
+All methods must be accessed through the interface '''org.freedesktop.MediaPlayer'''
+
 == The Object Hierarchy ==
 
 * / : Media Player identification
@@ -45,15 +49,6 @@ For example:
 * /Player : Playback control
 
 * /TrackList : [[#"TrackList"|TrackList]] management
-
-=== The Interface ===
-
-Each object has an assigned interface:
-* / is accessed using the interface '''org.freedesktop.MediaPlayer.Root'''
-
-* /Player is accessed using the interface '''org.freedesktop.MediaPlayer.Player'''
-
-* /TrackList is accessed using the interface '''org.freedesktop.MediaPlayer.TrackList'''
 
 == The Methods ==
 
@@ -113,18 +108,6 @@ Each dict entry is organized as follows
   <method name="GetMetadata">
     <arg type="i" direction="in" />
     <arg type="a{sv}" direction="out" />
-  </method>
-
-==== Goto ====
-Immediately stops the current track and start playing the track at given position.
-
-===== Arguments: =====
-* int: Position in the [[#"TrackList"|TrackList]] of the item which should be played.
-
-===== Introspection data: =====
-
-  <method name="Goto">
-    <arg type="i" direction="in" />
   </method>
 
 ==== GetCurrentTrack ====
