Levitation import of page 2472 rev 8436 (minor).

--- a/0-/Client:GNOME Do.mediawiki
+++ b/0-/Client:GNOME Do.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=GNOME Do| author=Scott Albertine| website=http://do.davebsd.com/wiki/index.php?title=Xmms2_plugin GNOME Do wiki page| version=1.0| devlanguage=C#| ui=GNOME| descriptionThe client is a GNOME Do plugin that allows Do to control and interact with xmms2.  It uses the xmms2 CLI as a mediator, and if anyone who knows C or C++ is generous enough to make it a true client by using the existing interfaces, feel free, you'll get co-author status straight off.  Also, it is lacking cover support and has problems with name length, both of which would be fixed by C/C++ interfaces.}}
+{{Client| name=GNOME Do| author=Scott Albertine| website=http://do.davebsd.com/wiki/index.php?title=Xmms2_plugin GNOME Do wiki page| version=1.0| devlanguage=C#| ui=GNOME| description=The client is a GNOME Do plugin that allows Do to control and interact with xmms2.  It uses the xmms2 CLI as a mediator, and if anyone who knows C or C++ is generous enough to make it a true client by using the existing interfaces, feel free, you'll get co-author status straight off.  Also, it is lacking cover support and has problems with name length, both of which would be fixed by C/C++ interfaces.}}
