--- a/0-/New korving CLI.mediawiki
+++ b/0-/New korving CLI.mediawiki
@@ -178,6 +178,7 @@ default, directories are added recursively.
 
  Options:
  -f, --file               Treat the arguments as file paths, not a pattern.
+ -P, --pls                Treat the files as playlist files.
  -N, --non-recursive      Do not add directories recursively.
  
  -p, --playlist <name>    Add to a given playlist.
