--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -51,6 +51,7 @@ All current clients should be found here.
 {{ClientTableEntry|XMMS2Musica| Graphical / Cairo (skinnable) | Python | in development | Template-alike simple skinned player }}
 {{ClientTableEntry|XMMS2tray| Tray Icon / GTK | Python | in development | *nix GTK+2 system tray integration }}
 {{ClientTableEntry|XmmsDeskbar| Gnome Deskbar Plugin | Python | in development | When typing in the input field of deskbar, albums, songs and artists are queried }}
+{{ClientTableEntry|xmms2swi| Browser / Webclient | PHP | in development | Simple web interface, small and works well with ALL browsers! }}
 {{ClientTableEntry|xmms2-osd| On-Screen Display / XOSD | Python | rewrite, in development | Simple song info on-screen display }}
 {{ClientTableEntry|xmms2-pidgin| Pidgin Plugin | C | mostly stable | Pidgin plugin to display current song }}
 {{ClientTableEntry|xmms2_jump| Quick Search (GTK/curses) | C++ | in development | Let's you search your playlist in real time. }}
