Levitation import of page 2474 rev 8447.

--- a/0-/Client:xmms2swi.mediawiki
+++ b/0-/Client:xmms2swi.mediawiki
@@ -1,2 +1,2 @@
-{{Client| name=xmms2swi| author=[[Przemyslaw Grzywacz]] | http://xmms2swi.sourceforge.net/|
-devlanguage=Python, pyGtk and pyCairo| ui=X OSD| screenshots=[http://www.flickr.com/photos/93644465@N00/60011223/  1]| description= The xmms2-osd has suffered a major rewrite and has dropped the old osd interface and now it works with pygtk and pycairo, the main advantage is seamless integration with compositing managers of beryl,compiz, and xcompmgr. Now we're getting true transparency and a more updated client. Currently you can change font face, size , background color, foreground color and the OSD placement from the configuration file. In the future you will be able to set a custom format for the OSD. | website=https://gna.org/projects/xmms2-osd/}}
+{{Client| name=xmms2swi| author=[[Przemyslaw Grzywacz]] | http://xmms2swi.sourceforge.net/|version=0.5|
+devlanguage=PHP| ui=Browser / Webclient| screenshots=[http://sourceforge.net/project/screenshots.php?group_id=234756  5 browsers]| description=XMMS2SWI is a very small and light interface for basic XMMS2 features. It was designed to work on cellphones and PDAs with limited browser capabilites and low bandwidth. | website=http://xmms2swi.sourceforge.net/}}
