--- a/0-/GSoC:2008/nycli/Roadmap.mediawiki
+++ b/0-/GSoC:2008/nycli/Roadmap.mediawiki
@@ -4,13 +4,14 @@
 * Review code and FIXMES [2008-7-24]
 * '''''MILESTONE'''''
 
-
 * Collections operations [2008-08-03]
-* Add/Remove improvements
-* Aliases [2008-08-07]
-
+* Server operations
 * '''''MILESTONE'''''
 
+* Add/Remove improvements
+* Globbing
+* Aliases
+* '''''MILESTONE'''''
 
 * Discuss with mentor what todo next
 ** Extend parser? Virtual paths?
