--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -44,6 +44,7 @@ All current clients should be found here.
 {{ClientTableEntry|Sopran| Graphical / GTK | Ruby | in development | Simple player with plugin system }}
 {{ClientTableEntry|Spring| Graphical / Qt4 | Python | in development | multi-featured client with different media browsers }}
 {{ClientTableEntry|TurboX2| Browser / Webclient | Python, JS | in development | Lets you control XMMS2 via your Webbrowser }}
+{{ClientTableEntry|vimxmms2| Vim Plugin | Python | in development | A XMMS2 client for Vim }}
 {{ClientTableEntry|Wmxmms2| Dockapp | C | stable | Client dockapp for WindowMaker or any other dockapp-capable windowmanager }}
 {{ClientTableEntry|x2c| console | ruby | stable | little rubyistic console client with advanced features}}
 {{ClientTableEntry|XMMbaSh2 | console | bash | in development | A single line bash client, enables all features of current XMMS2 CLI client}}
