--- a/0-/OS X.mediawiki
+++ b/0-/OS X.mediawiki
@@ -1,7 +1,7 @@
 == Installation notes == 
 Download and install [http://www.macports.org/ macports]
 
-Install sqlite through macports with the command: "port install sqlite3". Now you should be good to compile xmms2 on your Mac OS X Tiger.
+Install sqlite through macports with the command: "port install sqlite3". Then, make sure that '/opt/local/lib/pkgconfig' is on your PKG_CONFIG_PATH. Now you should be good to compile xmms2 on your Mac OS X Tiger.
 
 == CoreAudio output ==
 XMMS2 has Native support for CoreAudio, no more fulhack as in XMMS1 using a hacked ESD.
