Removed download link and HP, as they are broken
Levitation import of page 1180 rev 8465.

--- a/0-/Client:ixmms2.mediawiki
+++ b/0-/Client:ixmms2.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=ixmms2| author=plb| website=[http://www.boxwhore.org/modules/wfdownloads/singlefile.php?cid=19&lid=183 Boxwhore.org]| version=Unknown| devlanguage=Perl| ui=Console (irssi?)| screenshots=N/A| description=An irssi client which now supports basic control functions as well as displaying currently playing song see the script for details, it assumes all your music is properly tagged. Download [http://www.boxwhore.org/modules/wfdownloads/singlefile.php?cid=19&lid=183 HERE.]}}
+{{Client| name=ixmms2| author=plb| website=N/A| version=Unknown| devlanguage=Perl| ui=Console (irssi?)| screenshots=N/A| description=An irssi client which now supports basic control functions as well as displaying currently playing song see the script for details, it assumes all your music is properly tagged.}}
