--- a/0-/Client:XMMS2tray.mediawiki
+++ b/0-/Client:XMMS2tray.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=XMMS2tray| author=[mailto:thomas@jollans.com Thomas Jollans]| website=[http://code.jollybox.de/wiki/Software/Xmms2tray http://code.jollybox.de/wiki/Software/Xmms2tray]| version=0.5| devlanguage=Python| ui=GTK+2, tray icon| screenshots=[http://zombiehq.jollybox.de/xmms2tray/x2t_images/notification.png] [http://zombiehq.jollybox.de/xmms2tray/x2t_images/tray.png] [http://zombiehq.jollybox.de/xmms2tray/x2t_images/menu.png]| description=&#42;nix GTK+2 system tray integration for XMMS 2}}
+{{Client| name=XMMS2tray| author=[mailto:thomas@jollans.com Thomas Jollans]| website=[http://code.jollybox.de/wiki/Software/Xmms2tray http://code.jollybox.de/wiki/Software/Xmms2tray]| version=0.5| devlanguage=Python| ui=GTK+2, tray icon| screenshots=[http://code.jollybox.de/pub/xmms2tray/screenshots/notification.png] [http://code.jollybox.de/pub/xmms2tray/screenshots/tray.png] [http://code.jollybox.de/pub/xmms2tray/screenshots/menu.png]| description=&#42;nix GTK+2 system tray integration for XMMS 2}}
