--- a/0-/IRC Meeting/2008-12-07/Agenda.mediawiki
+++ b/0-/IRC Meeting/2008-12-07/Agenda.mediawiki
@@ -45,6 +45,7 @@ If you cannot be present, please make sure to edit this page to add your point o
 ** Is there news?
 * SkitIDet
 ** karma?
+** mantis?
 * Planet
 ** A number of feed links are broken
 ** Is source available, so that patches can be submitted?
